<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<item
		android:id="@+id/mnuItemSave"
		android:icon="@android:drawable/ic_menu_save"
		android:title="@string/strSaveText"
		app:showAsAction="always" />
	<item
		android:id="@+id/mnuItemDelete"
		android:icon="@android:drawable/ic_menu_delete"
		android:title="@string/strDeleteText"
		app:showAsAction="always" />
	<item
		android:id="@+id/mnuItemLocation"
		android:icon="@android:drawable/ic_menu_mylocation"
		android:title="@string/strLocationText"
		app:showAsAction="always" />
	<item
		android:id="@+id/mnuItemShare"
		android:icon="@android:drawable/ic_menu_share"
		android:title="@string/strShareText"
		app:showAsAction="always" />
</menu>